--- a/ProjectB/past.css
+++ b/ProjectB/past.css
@@ -1,9 +1,15 @@
 body{
+    background-image: url('pastWallpaper.png');
     background-color: rgb(42, 81, 181);
     color: rgb(255, 255, 255) ;
     display: flex;
-    width: 100%;
-    height: 100%;
+    justify-content: center;
+    align-items: center;
+    
+    /* width: 3500vw;
+    height: 2500vh;
+    right: 0%;
+    top: 0%; */
 
     overflow: hidden;
 }
@@ -19,6 +25,34 @@ img {
     transform: translate(-50%, -50%) scale(1);
     animation: fadein 0.5s;
 }
-/* .pastBackground{
-
-} */
+.pastBackground{
+    position: absolute;
+    width: 100%;
+    height: auto;
+    left: 50%;
+    top: 100%;
+    z-index: -10;
+}
+.Backgroundimage-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.video-container1{
+    display: block;
+    position: absolute;
+    top: 6%;
+    left: 4%;
+    z-index: -11;
+    width:35%;
+    height: auto;   
+}
+.video-container2{
+    display: block;
+    position: absolute;
+    bottom: 5%;
+    right: 4%;
+    z-index: -11;
+    width: 29%;
+    height: auto;   
+}
