--- a/ProjectB/past.css
+++ b/ProjectB/past.css
@@ -41,16 +41,16 @@ img {
 .video-container1{
     display: block;
     position: absolute;
-    top: 6%;
+    top: 4%;
     left: 4%;
     z-index: -11;
-    width:35%;
+    width:37%;
     height: auto;   
 }
 .video-container2{
     display: block;
     position: absolute;
-    bottom: 1%;
+    bottom: 2%;
     right: 4%;
     z-index: -11;
     width: 29%;
@@ -72,5 +72,13 @@ img {
     right:0;
     top:50%;
     background-image: url(btn-future.png);
+    z-index: 10;
+}
+.sticker{
+    position: absolute;
+    width: 100%;
+    height: 43px;
+    right:0%;
+    top:35%;
     z-index: 10;
 }
