--- a/11r-sketch-gallery-page/style.css
+++ b/11r-sketch-gallery-page/style.css
@@ -68,13 +68,16 @@ p{
   margin-top: 10px;
 }
 /* Styles for the p5 canvas */
-h2{
+
+/* h2{
   font-family: 'Indie Flower', cursive;
   font-size: 25px;
   color: #ffffff;
   /* margin-top: 10px; */
-  margin: 0;
-}
+  /* margin: 0;
+} */ 
+
+
 /* Styles for links */
 a{
   color: #333333;
@@ -101,16 +104,19 @@ video{
   justify-content: center;
 }
 
-.frogAndDrawText, b {
+
+/* .frogAndDrawText, b {
   display: inline-block;
   margin: 10px;
-}
+} */
 
 img{
   width: 70%;
   height: auto;
   margin: 10px;
 }
+
+
 
 
 
